# wallet_bot

./: .gitignore  pyproject.toml
tg_bot/: __main__.py  test.py
tg_bot/data/: config.py  loader.py
tg_bot/database/: database.py
tg_bot/files/: analytics.py  balances.xlsx  expenses.xlsx  income.xlsx  transactions.xlsx
tg_bot/handlers/admin/: add_new_user.py  bot_start.py
tg_bot/handlers/users/: add_expenses.py  add_incomes.py  conversion.py  setting.py  start.py
tg_bot/keyboards/: reply.py
tg_bot/states/: add_del_state.py  analytic_state.py  authorization_state.py  conversion_state.py  expenses_state.py  incomes_state.py  setting_state.py
