[tool.poetry]
name = "wallet-bot"
version = "0.1.0"
description = ""
authors = ["tettle2806 <zidanzohid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
